End to end with static data.

--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Views/Error/Index.cshtml
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Views/Error/Index.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "Error";
 }
 
-<h2>Sorry! Something is not working, please try agian after sometime.</h2>
+<h2>@TempData[SimpleTwitterApp.UI.Constants.AppConstants.ERROR_MESSAGE]</h2>
 
