--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Views/Tweet/UserTweets.cshtml
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Views/Tweet/UserTweets.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<SimpleTwitterApp.UI.Models.TweetModel>
 
-<h2>Tweets</h2>
+<h2>My Tweets</h2>
 
 <div class="list-group">
     @foreach (var item in Model)
@@ -10,14 +10,9 @@
                 <div class="list-group-item-heading">@item.TweetContent</div>
             </div>
             <div class="row">
-                <div class="col">
-                    <div class="list-group-item-text">@item.TwittedBy</div>
-                </div>
-                <div class="col">
-                    <div class="list-group-item-text">@item.TweetTime</div>
-                </div>
+                <div class="list-group-item-text">@item.TwittedBy</div>
+                <div class="list-group-item-text">@item.TweetTime</div>
             </div>
         </div>
     }
 </div>
-
