--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Views/Tweet/Index.cshtml
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Views/Tweet/Index.cshtml
@@ -8,10 +8,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
+                <h2>All Tweets</h2>
                 @Html.Partial("~/Views/Tweet/Tweets.cshtml", Model.Tweets)
             </div>
             <div class="col-md-4">
-                @Html.Partial("~/Views/Tweet/UserTweets.cshtml", Model.MyTweets)
+                <h2>My Tweets</h2>
+                @Html.Partial("~/Views/Tweet/Tweets.cshtml", Model.MyTweets)
             </div>
             <div class="col-md-4">
                 @Html.Partial("~/Views/Tweet/Users.cshtml", Model.Users)
